2003-05-07  Not Zed  <NotZed@Ximian.com>

	** See bug #42456
	
	* mail-composer-prefs.c (spell_language_button_press): set the
	enable/disable button to the right text when we toggle a column.
	Added a fixme about the weird code in the whole routine.

2003-05-07  Jeremy Katz  <katzj@redhat.com>

	* evolution-mail.schemas
	(/schemas/apps/evolution/mail/display/mime_types):  Correct
	default for list.

2003-05-06  Not Zed  <NotZed@Ximian.com>

	** See bug #42400

	* mail-tools.c (meta_data_key): protect against getting an
	unparsable uri.

2003-05-05  Not Zed  <NotZed@Ximian.com>

	** See bug #42294.
	
	* mail-config.c (config_write_fonts): Also set the custom font
	style for *BonoboPlug*GtkHTML.

2003-05-05  Ettore Perazzoli  <ettore@ximian.com>

	* mail-session.c (request_password): Set OK as the default
	response for the password_dialog.

2003-04-30  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-callbacks.c (mark_as_unseen): To be consistant with the
	message-list envelope toggle, undelete the message when we unmark
	the Seen flag here as well. Fixes bug #42118.

2003-04-30  Jeffrey Stedfast  <fejj@ximian.com>

	* message-list.c (ml_tree_value_at): Fixed to return the correct
	values (swapped) in order to fix bug #42120.

2003-04-30  Jeffrey Stedfast  <fejj@ximian.com>

	* message-list.c (regen_list_regened): Save the tree state before
	we tear down the tree and then load it back again. yay. Fixes bug
	#42170 and #40074.

2003-04-30  Not Zed  <NotZed@Ximian.com>

	** See bug #41748
	
	* mail-send-recv.c (build_dialogue): make sure we dont add any
	SEND_SEND types to the receive table.  When we add the SEND_SEND
	type, key it on a fixed string SEND_URI_KEY.
	(receive_done): if it is a SEND_SEND type, use SEND_URI_KEY to
	remove it from the active list.
	(mail_receive_uri): make sure we never add a SEND_SEND type to the
	receive list.
	(mail_send): key the send info on SEND_URI_KEY not transport url.

2003-04-29  Jeremy Katz  <katzj@redhat.com>
